--- a/pages/news.html
+++ b/pages/news.html
@@ -4,38 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Семестровая работа</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Главная</li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </div>
-    <div id="content">
+    <div class="page-container">
+        <div class="header">Хэдер</div>
+        <div class="nav">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Контакты</a></li>
+            </ul>
+        </div>
+
+    <div class="content">
         <div>
-            <h1><strong>Новость 1</strong></h1>
+            <h1 class="herob"><strong>Новость 1</strong></h1>
             <strong>01.01.2023 Д.В. Заботкин</strong>
             <p>На нас нападут иноплешененцы</p>
         </div>
         <div>
-            <h1><strong>Новость 2</strong></h1>
+            <h1 class="herob"><strong>Новость 2</strong></h1>
             <strong>01.01.2024 Д.В. Заботкин</strong>
             <p>На нас упадет метеорит</p>
         </div>
         <div>
-            <h1><strong>Новость 3</strong></h1>
+            <h1 class="herob"><strong>Новость 3</strong></h1>
             <strong>01.11.2025 Д.В. Заботкин</strong>
             <p>Резкий всплеск </p>
         </div>
 
 
-
+        </div>
     </div>
-    <div id="footer">Футер</div>
+    <div class="footer">Футер</div>
 </body>
 </html>
