--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Семестровая работа</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Главная</li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </div>
-    <div id="content">
-        <div>
-            <p>Адрес электронной почты: zabotkin.d.v@mirea.edu</p>
-            <p>Адрес: г.Mосква, ул. Пушкина, д. Колотушкина</p>
-            <button><a href="https://www.youtube.com/watch?v=HIcSWuKMwOw&t=4s">Нажми на меня</a></button>
+    <div class="page-container">
+        <div class="header">Хэдер</div>
+        <div class="nav">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Контакты</a></li>
+            </ul>
         </div>
 
 
-
+        <div class="content-email">
+            <p>Адрес электронной почты: zabotkin.d.v@mirea.edu</p>
+            <p>Адрес: г.Mосква, ул. Пушкина, д. Колотушкина</p>
+            <button><a class="button-click" href="https://www.youtube.com/watch?v=HIcSWuKMwOw&t=4s">Нажми на меня</a></button>
+        </div>
     </div>
-    <div id="footer">Футер</div>
+    <div class="footer">Футер</div>
 </body>
 </html>
