--- a/pages/index.html
+++ b/pages/index.html
@@ -1,41 +1,53 @@
 ﻿<!DOCTYPE html>
 
-<html lang="ru" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Семестровая работа</title>
+    <link rel="stylesheet" href="style/styles.css">
+
 </head>
+
 <body>
-    <div id ="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Главная</li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
+    <div class="page-container">
+        <div class ="header">Хэдер</div>
+        <div class="nav">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            </ul>
+        </div>
+    <div class="content">
+        <div class="profile-header">
+            <h1 class="profile-title">Информация об авторе</h1>
+            <img class="profile-photo" src="images/photo.png" alt="Фото автора"/>
+            <h2 class="profile-name">Заботкин Данила Викторович</h2>
+            <p class="profile-group">ЭФБО-17-24</p>
+        </div>
+    <div class="about-me">
+        <p> Обо мне: Я родился в 2007, в Москве. Закончил школу, поступил в МИРЭА.</p>
+
     </div>
-    <div id="content">
-        <p>Информация об авторе</p>
-        <img src ="images/photo.png" alt="Фото автора" width="200" height="250" />
-        <p>Заботкин Данила Викторович</p>
-        <p>ЭФБО-17-24</p>
-        <p>Обо мне: Я родился в 2007, в Москве. С детства сразу было видно что я Cигма. Был предводителем субкультуры Cигм с 2007 по 2024. После этого свершилась моя капитуляция, и я решил стать фурри в МИРЭА.
-        </p>
-        <div>Навык 1: Быть сигмой</div>
-        <div>Навык 2: Использовать навык 1</div>
-        <div>Навык 3: Играть на гитаре кузнечика</div>
-        <div>Навык 4: Быть !Полезным</div>
-        <div>
-            Мой опыт работы:
-            <div>
-                Опыт 1<br>
-                Безработный
-            </div>
+           
+    <div class="skills-container">      
+            <div class="skill-tag">Навык 1</div>
+            <div class="skill-tag">Навык 2</div>
+            <div class="skill-tag">Навык 3</div>
+            <div class="skill-tag">Навык 4</div>
+        </div>
+    <div class="experience-section">
+        <h2 class="section-title">Мой опыт работы</h2>
+        <div class="experience-card">
+            <h3 class="experience-title">Опыт 1</h3>
+            <p class="experience-desc">Продавал арбузы всю жизнь</p>
         </div>
     </div>
-    <div id="footer">Футер</div>
+    </div>
+    </div>
+    <div class="footer">Футер</div>
 </body>
 </html>
