--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Семестровая работа</title>
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="pages/style/styles.css">
 
 </head>
 
@@ -14,11 +14,11 @@
         <div class ="header">Хэдер</div>
         <div class="nav">
             <ul>
-                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="./pages/news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="./pages/practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="./pages/goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="./pages/contacts.html">Контакты</a></li>
             </ul>
         </div>
     <div class="content">
