--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="content">
         <div class="profile-header">
             <h1 class="profile-title">Информация об авторе</h1>
-            <img class="profile-photo" src="images/photo.png" alt="Фото автора"/>
+            <img class="profile-photo" src="pages/images/photo.png" alt="Фото автора"/>
             <h2 class="profile-name">Заботкин Данила Викторович</h2>
             <p class="profile-group">ЭФБО-17-24</p>
         </div>
